--- a/Tools/style.css
+++ b/Tools/style.css
@@ -1,3 +1,38 @@
+body{
+    margin: 0;
+}
+
+/*----- NAVBAR -----*/
+
+.navbar{
+    background-color: rgb(236, 236, 236);
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+}
+
+.logo{
+    padding-left: 20px;
+}
+
+ul{
+    display: flex;
+    flex-direction: row;
+    font: 1em sans-serif;
+    font-weight: bold;
+}
+
+.contents li{
+    list-style-type: none;
+    padding: 20px;
+    font-size: 1.5em;
+}
+
+.contents a{
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+}
 /*-*/
 
 .container{
@@ -17,13 +52,14 @@
     height: 200px;
     width: 200px;
     position: absolute;
+    font: 1em sans-serif;
 }
 
 #menu button{
     height: 200px;
     width: 200px;
     border-radius: 50%;
-    border-style: none;
+    border-style: none;font: 1em sans-serif;
 }
 
 #menu{
@@ -177,3 +213,4 @@
     animation: animeCurrency 1s ease-out;
     animation-fill-mode: forwards;
 }
+
