--- a/Tools/style.css
+++ b/Tools/style.css
@@ -329,9 +329,10 @@ body{
     flex-direction: column;
     padding-left: 150px;
     padding-right: 100px;
-    font: 1.8em sans-serif;
+    font: 1.5em sans-serif;
     align-items: center;
     justify-content: center;
+    line-height: 170%;
 }
 
 .about-cars p{
@@ -341,30 +342,69 @@ body{
 
 /*----- ABOUT CONVERTIBLE -----*/
 
-.about-sports{
-    font: 1em sans-serif;
+.about-allcars{
     height: 90vh;
     background-color: hsl(269, 100%, 73%);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    font-family: sans-serif;
 }
 
-.cars-sports{
-    height: 60vh;
+.cars-info{
+    height: 50vh;
     width: 80vw;
-    border: 2px solid;
     display: flex;
     justify-content: center;
     align-items: center;
     justify-content: space-evenly;
 }
 
-.corvette:hover{
-    transform: translateY(-20px);
+.corvette{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.corvette img{
+    z-index: 2;
+    transition: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-out;
+    cursor: pointer;
 }
 
 .corvette p{
-    display: block;
+    z-index: 1;
+    margin-top: -20px;
+    transition: all;
+    transition-duration: 0.2s;
+}
+
+.corvette img:hover{
+    transform: translateY(-20px);
+    box-shadow: 0px 7px 8px rgb(45, 45, 45);
+}
+
+.corvette:hover p{
+    transform: translateY(20px);
+}
+
+.about-allcars button{
+    font-size: 1.2em;
+    padding: 10px;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: white;
+    color: white;
+    background-color: hsl(269, 100%, 73%);
+    transition: all 0.3s;
+    cursor: pointer;
+}
+
+.about-allcars button:hover{
+    background-color: white;
+    color: hsl(269, 100%, 73%);
 }
