--- a/Tools/style.css
+++ b/Tools/style.css
@@ -104,6 +104,13 @@ body{
     cursor: pointer;
 }
 
+.container a{
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+}
+
 #cars button{
     height: 200px;
     width: 200px;
@@ -410,7 +417,7 @@ body{
 .about-allcars button{
     font-size: 1em;
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 7px;
     border-style: solid;
     border-color: rgb(0, 0, 0);
     color: rgb(0, 0, 0);
