--- a/Tools/style.css
+++ b/Tools/style.css
@@ -600,9 +600,8 @@ body{
     background-size: cover;
 }
 
-/* MENU FRAMES */
 
-/* ------------------------------- */
+/* MENU FRAMES */
 
 #top{
     height: 100vh;
@@ -633,9 +632,8 @@ body{
     position: absolute;
     border-radius: 50%;
     box-shadow: inset hsl(0, 0%, 0%) 0px 0px 30px -10px;
-    animation: fadeIn 0.5s forwards;
+    animation: fadeIn 1s forwards;
     display: none;
-/*     animation: frameFloatBelow 1.5s infinite; */
     background-image: linear-gradient(hsla(0, 0%, 100%, 0.956),hsla(0, 0%, 100%, 0.796)), url(./pics/Sports/supra.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -646,11 +644,12 @@ body{
         opacity: 0;
         scale: 1;
     }
-    80%{
-        opacity: 1;
+    60%{
+        opacity: 0.5;
         scale: 1.05;
     }
     100%{
+        opacity: 1;
         scale: 1;
     }
 }
@@ -686,7 +685,7 @@ body{
 
 
 
-/* TESTING */
+/* FOOTER */
 
 .footer{
     height: 100vh;
@@ -698,3 +697,85 @@ body{
     background-size: cover;
     
 }
+
+
+
+/* ------------------------- SPORTS PAGE ---------------------------- */
+
+/* TITLE PAGE */
+
+.title-page{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image: linear-gradient(hsl(269, 100%, 83%, 0.85),hsl(269, 100%, 58%, 0.85)), url(./pics/Sports/corvette.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    animation: loadBg 4s forwards;
+}
+
+@keyframes loadBg{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+.title-page h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 880%;
+    animation: loadTitle 4s forwards;
+}
+
+@keyframes loadTitle{
+    0%{
+        transform: translateY(200%);
+        opacity: 0;
+    }
+    10%{
+        transform: translateY(-10%);
+        opacity: 0.7;
+    }
+    40%{
+        transform: translateY(50%);
+        opacity: 1;
+    }
+    70%{
+        transform: translateY(50%);
+        opacity: 1;
+        scale: 1;
+    }
+    100%{
+        transform: translateY(0);
+        transform: translateX(20%);
+        scale: 0.8;
+    }
+}
+
+.title-page p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 180%;
+    display: block;
+    padding-left: 120px;
+    padding-right: 120px;
+    animation: loadIntro 1.3s forwards;
+    animation-delay: 3s;
+    opacity: 0;
+}
+
+@keyframes loadIntro{
+    0%{
+        opacity: 0;
+        transform: translateY(50%);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
