--- a/Tools/style.css
+++ b/Tools/style.css
@@ -250,6 +250,7 @@ body{
     z-index: 1;
     background-color: hsl(52, 100%, 73%);
     transition: all 0.5s;
+    display: none;
 }
 
 #suv{
@@ -258,6 +259,7 @@ body{
     z-index: 1;
     background-color: hsl(18, 100%, 73%);
     transition: all 0.5s;
+    display: none;
 }
 
 #electric{
@@ -266,6 +268,7 @@ body{
     z-index: 1;
     background-color: hsl(161, 100%, 73%);
     transition: all 0.5s;
+    display: none;
 }
 
 #sedan{
@@ -274,6 +277,7 @@ body{
     z-index: 1;
     background-color: hsl(211, 100%, 73%);
     transition: all 0.5s;
+    display: none;
 }
 
 #sports{
@@ -282,6 +286,7 @@ body{
     z-index: 1;
     background-color: hsl(269, 100%, 73%);
     transition: all 0.5s;
+    display: none;
 }
 
 #muscle{
@@ -290,6 +295,7 @@ body{
     z-index: 1;
     background-color: hsl(321, 100%, 73%);
     transition: all 0.5s;
+    display: none;
 }
 
 /* MENU BUTTON HOVER */
@@ -515,7 +521,28 @@ body{
     transition-duration: 0.3s;
     transition-timing-function: ease-out;
     cursor: pointer;
+    border-radius: 10px;
 }
+
+/* ----------Under Testing---------- */
+
+/* .card-image-zoom{
+    transition: 0.5s;
+    z-index: 5;
+    animation: animeImgZoom 0.5s forwards;
+    text-emphasis: none;
+}
+
+@keyframes animeImgZoom{
+    from{
+        scale: 1;
+    }
+    to{
+        scale: 2;
+        position: absolute;
+        justify-content: center;
+    }
+} */
 
 .cars-card p{
     z-index: 1;
