--- a/Tools/style.css
+++ b/Tools/style.css
@@ -956,3 +956,63 @@ hr{
     }
 }
 
+
+
+
+
+/* --------------- TOP FIVE TABLE -------------- */
+
+.table-container{
+    padding-top: 50px;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid black;
+}
+
+th, td{
+    padding: 20px 20px 10px 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+th{
+    background-color: black;
+    color: white;
+}
+
+td{
+    background-color: rgb(239, 239, 239);
+}
+
+.table-btns{
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 60%;
+}
+
+.table-btns button{
+    font-size: 1.2em;
+    border-style: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 5px;
+    background-color: rgb(239, 239, 239);
+    transition: all 0.3s;
+
+}
+
+.table-btns button:hover{
+    scale: 1.1;
+    background-color: rgb(214, 214, 214);
+}
+
+.table-btns button:active{
+    scale: 1.2;
+}
