--- a/Tools/style.css
+++ b/Tools/style.css
@@ -173,6 +173,7 @@ body{
     }
 }
 
+/* ----------------------------- */
 
 /* CONTAINER */
 
@@ -184,23 +185,21 @@ body{
     align-items: center;
     position: relative;
     overflow: hidden;
+    animation: loadCarsbtn 3s forwards;
 }
 
 @keyframes loadCarsbtn{
     0%{
-        transform: translateY(-100%);
+        transform: translateY(-300%);
+        opacity: 0;
     }
-    30%{
+    40%{
+        opacity: 1;
         transform: translateY(0);
     }
     60%{
-        transform: translateY(-20%);
-    }
-    80%{
-        transform: translateY(0);
-    }
-    90%{
-        transform: translateY(-10%);
+        transform: translateY(-5%);
+        
     }
     100%{
         transform: translateY(0);
@@ -984,6 +983,7 @@ th{
 
 td{
     background-color: rgb(239, 239, 239);
+    animation: loadTable 1s forwards;
 }
 
 .table-btns{
@@ -1004,7 +1004,6 @@ td{
     margin: 5px;
     background-color: rgb(239, 239, 239);
     transition: all 0.3s;
-
 }
 
 .table-btns button:hover{
@@ -1014,4 +1013,104 @@ td{
 
 .table-btns button:active{
     scale: 1.2;
+}
+
+.table-btns :nth-child(1){
+    animation: loadButtons 1s forwards;
+    opacity: 0;
+}
+
+.table-btns :nth-child(2){
+    animation: loadButtons 1s forwards .1s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(3){
+    animation: loadButtons 1s forwards .2s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(4){
+    animation: loadButtons 1s forwards .3s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(5){
+    animation: loadButtons 1s forwards .4s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(6){
+    animation: loadButtons 1s forwards .5s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(7){
+    animation: loadButtons 1s forwards .6s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(8){
+    animation: loadButtons 1s forwards .7s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(9){
+    animation: loadButtons 1s forwards .8s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(10){
+    animation: loadButtons 1s forwards .9s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(11){
+    animation: loadButtons 1s forwards 1s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(12){
+    animation: loadButtons 1s forwards 1.1s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(13){
+    animation: loadButtons 1s forwards 1.2s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(14){
+    animation: loadButtons 1s forwards 1.3s;
+    opacity: 0;
+}
+
+.table-btns :nth-child(15){
+    animation: loadButtons 1s forwards 1.4s;
+    opacity: 0;
+}
+
+@keyframes loadButtons{
+    0%{
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    40%{
+        transform: translateY(-20%);
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+tr{
+    opacity: 0;
+    animation: loadTable 2s forwards;
+}
+
+@keyframes loadTable{
+    to{
+        opacity: 1;
+    }
 }
