--- a/Tools/style.css
+++ b/Tools/style.css
@@ -492,7 +492,7 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 1.3em;
 }
 
@@ -691,11 +691,64 @@ body{
     height: 100vh;
     width: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
     background-image: linear-gradient(hsla(0, 0%, 44%, 0.8),hsla(0, 0%, 0%, 0.8)), url(./pics/logo/footer.jpg);
     background-size: cover;
-    
+}
+
+.description{
+    display: flex;
+    height: 100vh;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+    float: left;
+    flex-direction: column;
+}
+
+.description a:hover{
+    color: rgb(86, 86, 86);
+}
+
+.logobox{
+    height: 20%;
+    padding-top: 10%;
+}
+
+.section-box{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.secs{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.secs a{
+    text-decoration: none;
+    color: black;
+}
+
+.footer-line{
+    margin-top: 5%;
+    width: 80%;
+    border: 1px solid rgb(69, 69, 69);
+}
+
+.contact-me{
+    padding-top: 5%;
+}
+
+.contact-me a{
+    text-decoration: none;
+    color: black;
+    padding-left: 20px;
 }
 
 /* ON SCROLL ANIMATIONS */
